--- a/usermanagement/src/main/resources/settings.properties
+++ b/usermanagement/src/main/resources/settings.properties
@@ -1,6 +1,7 @@
 connection.driver=org.hsqldb.jdbcDriver
-connection.url=jdbc:hsqldb:file:db/usermanagement
+connection.url=jdbc:hsqldb:file:C:/Users/workspace/usermanagement/db/usermanagement
 connection.user=sa
 connection.password=
 
-dao.itcs_16_7_Stasiuk.usermanagement.db.UserDao=itcs_16_7_Stasiuk.db.HsqldbUserDao
+dao.factory=com.artem.stasiuk.db.DaoFactoryImpl
+dao.com.marina.tretiakova.usermanagement.db.UserDao=com.artem.stasiuk.db.HsqldbUserDao
