--- a/usermanagement/build.xml
+++ b/usermanagement/build.xml
@@ -1,32 +1,105 @@
-<project name="usermanagement" basedir="." default="test">
+<project name="usermanagement" basedir="." default="war">
 
-	<property name="test-java-dir" value="${basedir}/src/test/java"/>
-	<property name="main-java-dir" value="${basedir}/src/main/java"/>
-	<property name="build-dir" value="${basedir}/bin"/>	
-	
+	<property name="test-java-dir" value="${basedir}/src/test/java" />
+	<property name="test-java-dir" value="${basedir}/src/test/resources" />
+
+	<property name="main-java-dir" value="${basedir}/src/main/java" />
+	<property name="main-resources-dir" value="${basedir}/src/main/resources" />
+
+	<property name="main-webapp-dir" value="${basedir}/src/main/webapp" />
+	<property name="main-webapp-webinf-dir" value="${main-webapp-dir}/WEB-INF" />
+
+	<property name="build-dir" value="${basedir}/target" />
+	<property name="classes-dir" value="${build-dir}/classes" />
+	<property name="lib-dir" value="${basedir}/lib" />
+
+	<property name="war-name" value="users" />
+	<property name="war-dir" value="${build-dir}/${war-name}" />
+	<property name="war-jsp-dir" value="${war-dir}" />
+	<property name="war-webinf-dir" value="${war-dir}/WEB-INF" />
+	<property name="war-lib-dir" value="${war-webinf-dir}/lib" />
+	<property name="war-classes-dir" value="${war-webinf-dir}/classes" />
+
 	<target name="clean">
-		<delete dir="${build-dir}"/>
+		<delete dir="${build-dir}" failonerror="false" />
 	</target>
-	
-	<target name="init">
-		<mkdir dir="${build-dir}"/>
+
+	<target name="init" depends="clean">
+		<mkdir dir="${build-dir}" />
+		<mkdir dir="${classes-dir}" />
 	</target>
-	
-	<target name="compile">
-		<javac srcdir="${main-java-dir}" destdir="${build-dir}"/>	
-	</target>
-	
-	<target name="test-compile">
-		<javac srcdir="${test-java-dir}"  destdir="${build-dir}"/>
-	</target>
-	
-	<target name="test">
-		<junit>
+
+	<target name="compile" depends="init">
+		<javac srcdir="${main-java-dir}" destdir="${classes-dir}" includeantruntime="true">
 			<classpath>
-				<pathelement location="${build-dir}"/>
+				<fileset dir="${lib-dir}" includes="*.jar" />
 			</classpath>
-			<formatter type="plain"/>
-			<test name="itcs_16_7_Stasiuk.UserTest"></test>
+		</javac>
+		<copy todir="${classes-dir}">
+			<fileset dir="${main-resources-dir}">
+				<include name="**/*.properties" />
+				<include name="**/*.xml" />
+			</fileset>
+		</copy>
+	</target>
+
+	<target name="war.exploded" depends="compile">
+		<!-- copy all jsp -->
+		<copy todir="${war-jsp-dir}">
+			<fileset dir="${main-webapp-dir}" />
+		</copy>
+		<!-- copy all libs -->
+		<copy todir="${war-lib-dir}">
+			<fileset dir="${lib-dir}">
+				<include name="hsqldb*.jar" />
+				<include name="jstl*.jar" />
+				<include name="standard*.jar" />
+			</fileset>
+		</copy>
+		<!-- copy all configs -->
+		<copy todir="${war-classes-dir}">
+			<fileset dir="${main-resources-dir}" />
+		</copy>
+		<!-- copy all classes -->
+		<copy todir="${war-classes-dir}">
+			<fileset dir="${classes-dir}" />
+		</copy>
+	</target>
+
+	<target name="war" depends="war.exploded">
+		<delete file="${build-dir}/${war-name}.war" failonerror="false" />
+		<war destfile="${build-dir}/${war-name}.war" webxml="${main-webapp-webinf-dir}/web.xml">
+			<fileset dir="${war-jsp-dir}">
+				<exclude name="WEB-INF/*.*" />
+			</fileset>
+			<classes dir="${war-classes-dir}" />
+			<lib dir="${war-lib-dir}" />
+			<webinf dir="${war-webinf-dir}">
+				<exclude name="web.xml" />
+			</webinf>
+		</war>
+	</target>
+
+	<target name="test-compile" depends="compile">
+		<javac srcdir="${test-java-dir}" destdir="${build-dir}">
+			<classpath>
+				<fileset dir="${lib-dir}" includes="*.jar" />
+			</classpath>
+		</javac>
+	</target>
+
+	<target name="test" depends="test-compile">
+		<junit includeantruntime="on">
+			<classpath>
+				<pathelement location="${build-dir}" />
+				<fileset dir="${lib-dir}" includes="*.jar" />
+			</classpath>
+			<formatter type="plain" />
+			<batchtest fork="no">
+				<fileset dir="${test-java-dir}">
+					<include name="**/*Test*.java" />
+				</fileset>
+			</batchtest>
 		</junit>
 	</target>
 </project>
